testsuite/tests/rename/should_fail/T21605c.hs
module T21605b where

import Prelude

wrongSig :: Prelude.head
wrongSig = undefined
